HW4/Q4/.antlr/miniJavaThreeCodeParser.java
// Generated from c:\Users\Sajjad\Documents\University\Semester 8\Compiler\HW4\HW4\Q4\miniJavaThreeCode.g4 by ANTLR 4.8

    from AddressCodeConverter import *

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miniJavaThreeCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, IDENTIFIER=36, DECIMAL_LITERAL=37, 
		HEX_LITERAL=38, OCT_LITERAL=39, BINARY_LITERAL=40, WS=41, COMMENT=42, 
		LINE_COMMENT=43;
	public static final int
		RULE_program = 0, RULE_main_class = 1, RULE_class_declaration = 2, RULE_var_declaration = 3, 
		RULE_method_declaration = 4, RULE_type_r = 5, RULE_statement = 6, RULE_expression = 7, 
		RULE_identifier_r = 8, RULE_integerLiteral = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main_class", "class_declaration", "var_declaration", "method_declaration", 
			"type_r", "statement", "expression", "identifier_r", "integerLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'{'", "'public'", "'static'", "'void'", "'main'", "'('", 
			"'String'", "'['", "']'", "')'", "'}'", "'extends'", "';'", "','", "'return'", 
			"'int'", "'boolean'", "'if'", "'else'", "'while'", "'System.out.println'", 
			"'='", "'+'", "'-'", "'*'", "'&&'", "'<'", "'.'", "'length'", "'true'", 
			"'false'", "'this'", "'new'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"IDENTIFIER", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", 
			"WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "miniJavaThreeCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	child_ptrs={}
	tmp_counter=0
	label_counter=0

	def new_label(self):
	    self.label_counter+=1
	    return 'Label_{}'.format(str(self.label_counter))
	def new_tmp(self):
	    self.tmp_counter+=1
	    return 'T_{}'.format(str(self.tmp_counter))

	def current_tmp(self):
	    return 'T_{}'.format(str(self.tmp_counter))


	public miniJavaThreeCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Main_classContext main_class() {
			return getRuleContext(Main_classContext.class,0);
		}
		public TerminalNode EOF() { return getToken(miniJavaThreeCodeParser.EOF, 0); }
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			print("BEGINS:")
			setState(21);
			main_class();
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(22);
				class_declaration();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_classContext extends ParserRuleContext {
		public StatementContext s;
		public List<Identifier_rContext> identifier_r() {
			return getRuleContexts(Identifier_rContext.class);
		}
		public Identifier_rContext identifier_r(int i) {
			return getRuleContext(Identifier_rContext.class,i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Main_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_class; }
	}

	public final Main_classContext main_class() throws RecognitionException {
		Main_classContext _localctx = new Main_classContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			identifier_r();
			setState(32);
			match(T__1);
			setState(33);
			match(T__2);
			setState(34);
			match(T__3);
			setState(35);
			match(T__4);
			setState(36);
			match(T__5);
			setState(37);
			match(T__6);
			setState(38);
			match(T__7);
			setState(39);
			match(T__8);
			setState(40);
			match(T__9);
			setState(41);
			identifier_r();
			setState(42);
			match(T__10);
			setState(43);
			match(T__1);
			setState(44);
			((Main_classContext)_localctx).s = statement();
			setState(45);
			match(T__11);
			setState(46);
			match(T__11);
			print(((Main_classContext)_localctx).s.v)
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public List<Identifier_rContext> identifier_r() {
			return getRuleContexts(Identifier_rContext.class);
		}
		public Identifier_rContext identifier_r(int i) {
			return getRuleContext(Identifier_rContext.class,i);
		}
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public List<Method_declarationContext> method_declaration() {
			return getRuleContexts(Method_declarationContext.class);
		}
		public Method_declarationContext method_declaration(int i) {
			return getRuleContext(Method_declarationContext.class,i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__0);
			setState(50);
			identifier_r();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(51);
				match(T__12);
				setState(52);
				identifier_r();
				}
			}

			setState(55);
			match(T__1);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(56);
				var_declaration();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(62);
				method_declaration();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public Type_rContext type_a;
		public Identifier_rContext identifier;
		public Type_rContext type_r() {
			return getRuleContext(Type_rContext.class,0);
		}
		public Identifier_rContext identifier_r() {
			return getRuleContext(Identifier_rContext.class,0);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((Var_declarationContext)_localctx).type_a = type_r();
			setState(71);
			((Var_declarationContext)_localctx).identifier = identifier_r();
			setState(72);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_declarationContext extends ParserRuleContext {
		public StatementContext s;
		public List<Type_rContext> type_r() {
			return getRuleContexts(Type_rContext.class);
		}
		public Type_rContext type_r(int i) {
			return getRuleContext(Type_rContext.class,i);
		}
		public List<Identifier_rContext> identifier_r() {
			return getRuleContexts(Identifier_rContext.class);
		}
		public Identifier_rContext identifier_r(int i) {
			return getRuleContext(Identifier_rContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Method_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_declaration; }
	}

	public final Method_declarationContext method_declaration() throws RecognitionException {
		Method_declarationContext _localctx = new Method_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method_declaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__2);
			setState(75);
			type_r();
			setState(76);
			identifier_r();
			setState(77);
			match(T__6);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(78);
				type_r();
				setState(79);
				identifier_r();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(80);
					match(T__14);
					setState(81);
					type_r();
					setState(82);
					identifier_r();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(91);
			match(T__10);
			setState(92);
			match(T__1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					var_declaration();
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(99);
				((Method_declarationContext)_localctx).s = statement();
				print(((Method_declarationContext)_localctx).s.v)
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(T__15);
			setState(108);
			expression(0);
			setState(109);
			match(T__13);
			setState(110);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_rContext extends ParserRuleContext {
		public Identifier_rContext identifier;
		public Identifier_rContext identifier_r() {
			return getRuleContext(Identifier_rContext.class,0);
		}
		public Type_rContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_r; }
	}

	public final Type_rContext type_r() throws RecognitionException {
		Type_rContext _localctx = new Type_rContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_r);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(T__16);
				setState(113);
				match(T__8);
				setState(114);
				match(T__9);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(T__17);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(T__16);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				((Type_rContext)_localctx).identifier = identifier_r();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public  v = str();
		public  type_a = str();
		public  prev_v = str();
		public StatementContext s;
		public ExpressionContext exp;
		public StatementContext ifs;
		public StatementContext es;
		public Identifier_rContext identifier;
		public Identifier_rContext identifier_r;
		public ExpressionContext exp1;
		public ExpressionContext exp2;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Identifier_rContext identifier_r() {
			return getRuleContext(Identifier_rContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__1);
				_localctx.v=''
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(122);
					((StatementContext)_localctx).s = statement();
					_localctx.v+=((StatementContext)_localctx).s.v+'\n'
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				match(T__11);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(T__18);
				setState(132);
				match(T__6);
				setState(133);
				((StatementContext)_localctx).exp = expression(0);
				setState(134);
				match(T__10);
				setState(135);
				((StatementContext)_localctx).ifs = statement();
				setState(136);
				match(T__19);
				setState(137);
				((StatementContext)_localctx).es = statement();
				if_go = self.new_label()
				else_go = self.new_label()
				_localctx.v += '\n'.join([item for item in ((StatementContext)_localctx).exp.tmps])+'\n'
				_localctx.v+='\t\t if ({}) goto {}\n'.format(((StatementContext)_localctx).exp.v , if_go)
				_localctx.v+=((StatementContext)_localctx).es.v
				_localctx.v+='\t\t goto {}\n'.format(else_go)
				_localctx.v+='{}:{}'.format(if_go,((StatementContext)_localctx).ifs.v)
				_localctx.v+='{}:{}'.format(else_go,'\t\t')
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				match(T__20);
				setState(148);
				match(T__6);
				setState(149);
				((StatementContext)_localctx).exp = expression(0);
				setState(150);
				match(T__10);
				setState(151);
				((StatementContext)_localctx).s = statement();
				go_while=self.new_label()
				inner_while=self.new_label()
				_localctx.v+='\t\t goto {}\n'.format(go_while)
				_localctx.v+='{}:{}'.format(inner_while,((StatementContext)_localctx).s.v)
				_localctx.v+=go_while + '\n'.join([item for item in ((StatementContext)_localctx).exp.tmps])+'\n'
				_localctx.v+='\t\t if({}) goto {}\n'.format(((StatementContext)_localctx).exp.v,inner_while)
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				match(T__21);
				setState(160);
				match(T__6);
				setState(161);
				expression(0);
				setState(162);
				match(T__10);
				setState(163);
				match(T__13);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(165);
				((StatementContext)_localctx).identifier = identifier_r();
				setState(166);
				match(T__22);
				setState(167);
				((StatementContext)_localctx).exp = expression(0);
				setState(168);
				match(T__13);
				_localctx.v='\n'.join([item for item in ((StatementContext)_localctx).exp.tmps])+'\n'
				_localctx.v+='\t\t {} = {}'.format(((StatementContext)_localctx).identifier.v , ((StatementContext)_localctx).exp.v)
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				((StatementContext)_localctx).identifier = ((StatementContext)_localctx).identifier_r = identifier_r();
				setState(173);
				match(T__8);
				setState(174);
				((StatementContext)_localctx).exp1 = expression(0);
				setState(175);
				match(T__9);
				setState(176);
				match(T__22);
				setState(177);
				((StatementContext)_localctx).exp2 = expression(0);
				setState(178);
				match(T__13);
				_localctx.v='\n'.join([item for item in ((StatementContext)_localctx).exp1.tmps])+'\n'
				_localctx.v+='\n'.join([item for item in ((StatementContext)_localctx).exp2.tmps])+'\n'
				tmp=self.new_tmp()
				_localctx.v+=AddressCodeConverter.array_initializer(((StatementContext)_localctx).identifier_r.v , ((StatementContext)_localctx).exp1.v , ((StatementContext)_localctx).exp2.v , tmp)
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public  v = str();
		public  type_a = str();
		public  prev_v = str();
		public  tmps = [];
		public ExpressionContext expl;
		public ExpressionContext exp1;
		public ExpressionContext exp;
		public IntegerLiteralContext integerLiteral;
		public Identifier_rContext identifier;
		public Token op;
		public ExpressionContext expr;
		public ExpressionContext exp2;
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public Identifier_rContext identifier_r() {
			return getRuleContext(Identifier_rContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
